Add Google Apps Script type definitions
So I can run "tsc" without it complaining about not knowing what a
GmailApp is.

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "prettier": {
     "trailingComma": "es5",
     "arrowParens": "always"
+  },
+  "dependencies": {
+    "@types/google-apps-script": "0.0.37"
   }
 }
