--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,7 +56,8 @@
     "./node_modules/@types/node/index.d.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "spec/*.ts"
   ],
   "exclude": [
     "node_modules",
