--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "^1.14.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.1.3"
   },
