--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/gapi.client.drive": "^3.0.1",
     "@types/jasmine": "^3.3.0",
+    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^10.12.5",
     "jasmine": "^3.3.0",
     "jasmine-ts": "^0.3.0",
